--- a/modelMoru/ModelMoru.ipynb
+++ b/modelMoru/ModelMoru.ipynb
@@ -1,40 +1,31 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "### Set up TensorFlow\n",
+    "\n",
+    "Import TensorFlow to get started:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'2.14.0'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 2.14.0\n"
+     ]
     }
    ],
    "source": [
-    "tf.__version__"
+    "import tensorflow as tf\n",
+    "print(\"TensorFlow version:\", tf.__version__)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
