--- a/modelMoru/ModelMoru.ipynb
+++ b/modelMoru/ModelMoru.ipynb
@@ -23,8 +23,22 @@
     }
    ],
    "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
     "import tensorflow as tf\n",
     "print(\"TensorFlow version:\", tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = ()\n",
+    "\n",
+    "validation_data = ()"
    ]
   }
  ],
